--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
 </head>
-<body>
+<body style="background-color:gray">
     <header>
-        <nav>the nav nav </nav>
+        <!-- <nav>the nav nav </nav> -->
     </header>
 
     <section>
@@ -15,22 +15,31 @@
     <h1>Tadiyos G. Haile</h1>
     <hr>
     <ul>
-        <li><a href="">W1D1, Home Page</a></li>
-        <li><a href="">W1D2, About Me</a></li>
-        <li><a href="">W1D3, About Me</a></li>
-        <li><a href="">W1D4, Movie Review</a></li>
-        <li><a href="">W1D5</a></li>
-        <li><a href="">W1D6</a></li>
-        <li><a href="">W2D1</a></li>
-        <li><a href="">W2D2</a></li>
+        <li style="font-family: 'Franklin Gothic Medium'"><a href="">W1D1, Home Page</a></li>
+        <li style="font-family: monospace"><a href="">W1D2, About Me</a></li>
+        <li style="font-family: monospace"><a href="">W1D3, About Me</a></li>
+        <li style="font-family: monospace"><a href="">W1D4, Movie Review</a></li>
+        <li style="font-family: monospace"><a href="">W1D5</a></li>
+        <li style="font-family: monospace"><a href="">W1D6</a></li>
+        <li style="font-family: monospace"><a href="">W2D1</a></li>
+        <li style="font-family: monospace"><a href="">W2D2</a></li>
     </ul>    
     </section>  
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <hr>
 
     <footer>
-        <div> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
-        <div> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
+        <div style="text-align: center"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
+        <div style="text-align: center"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
+        <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
     </footer>
 </body>
 </html>
