--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -39,7 +39,7 @@
     <footer>
         <div style="text-align: center"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
         <div style="text-align: center"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
-        <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+        <div style="text-align: center"></div><a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a></footer></div>
     </footer>
 </body>
 </html>
