make the picture circle
make the picture circle

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <section>
-        <img src="TadiyosGirma.jpg" alt="Profile Picture" height="200" width="200">
+        <img src="TadiyosGirma.jpg" alt="Profile Picture" height="200" width="200" style="border-radius:50%">
     <h1>Tadiyos G. Haile</h1>
     <hr>
     <ul>
