making everything center
making everything center

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -10,11 +10,11 @@
         <!-- <nav>the nav nav </nav> -->
     </header>
 
-    <section>
+    <section style="text-align: center">
         <img src="TadiyosGirma.jpg" alt="Profile Picture" height="200" width="200" style="border-radius:50%">
     <h1>Tadiyos G. Haile</h1>
     <hr>
-    <ul>
+    <ul style="list-style: none">
         <li style="font-family: 'Franklin Gothic Medium'"><a href="">W1D1, Home Page</a></li>
         <li style="font-family: monospace"><a href="">W1D2, About Me</a></li>
         <li style="font-family: monospace"><a href="">W1D3, About Me</a></li>
