--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -39,9 +39,9 @@
     <footer>
         <div style="text-align: center"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
         <div style="text-align: center"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
-        <a href="https://validator.w3.org/check?uri=https://tadiyosgirma.github.io/CS472-WAP-2020/CS472-WAP-2020/"> 
-            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-            </a>
+        <a href="https://validator.w3.org/check/referer"> 
+            <img src="./images/valid-xhtml10.png/>
+        </a>
     </footer>
 </body>
 </html>
