validator markup error corrected
validator markup error corrected

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -40,7 +40,7 @@
         <div style="text-align: center"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
         <div style="text-align: center"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
         <a href="https://validator.w3.org/check/referer"> 
-            <img src="./images/valid-xhtml10.png/>
+            <img src="./images/valid-xhtml10.png.png" alt="html validator"/>
         </a>
     </footer>
 </body>
