--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -16,8 +16,8 @@
     <hr>
     <ul style="list-style: none">
         <li style="font-family: 'Franklin Gothic Medium'"><a href="">W1D1, Home Page</a></li>
-        <li style="font-family: monospace"><a href="">W1D2, About Me</a></li>
-        <li style="font-family: monospace"><a href="">W1D3, About Me</a></li>
+        <li style="font-family: monospace"><a href="aboutMe.html">W1D2, About Me</a></li>
+        <li style="font-family: monospace"><a href="">W1D3, Recipe</a></li>
         <li style="font-family: monospace"><a href="">W1D4, Movie Review</a></li>
         <li style="font-family: monospace"><a href="">W1D5</a></li>
         <li style="font-family: monospace"><a href="">W1D6</a></li>
