--- a/CS472-WAP-2020/aboutMe.html
+++ b/CS472-WAP-2020/aboutMe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="aboutMeCSS.css"
+    <link rel="stylesheet" type="text/css" href="aboutMeCSS.css">
 </head>
 <body>
     <header>
