--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -50,13 +50,13 @@
                 <li>Pour filling into baked pastry shell.</li>
             </ul>
         </li>
-        <li><strong>Meringue:</strong> In a large glass or metal bowl ...</li>
+        <li><strong>Meringue:</strong> In a large glass or metal bowl ...
             <ul>
                 <li>Whip egg whites until foamy.</li>
                 <li>Add sugar gradually, and continue to whip until stiff peaks form. </li>
                 <li>Spread meringue over pie, sealing the edges at the crust.</li>
             </ul>
-            
+        </li>
         <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
     </ol>
 
