added hover color change
added hover color change

--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="recipeCSS.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
     <img src="../CS472-WAP-2020/images/pie.jpg" alt="The Pie Image">
 
     <p>One 9-inch pie <br /> 30 Min - Prep time <br /> 10 Min - Cook time <br /> 40 Min - Total <br /> 8 Servings</p>
-
+ 
     <hr>
 
     <h2>INGREDIENTS</h2>
@@ -33,7 +34,7 @@
 
     <hr>
     
-    <h2>DIRECTIONS</h2>
+    <h2>DIRECTIONS</h2> 
 
     <ol>
         <li><strong>Preheat Oven:</strong> Preheat oven to 350 degrees F (175 degrees C).</li>
