corrected the main page with css
corrected the main page with css

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
+    <link href="./css/home.css" type="text/css" rel="stylesheet" />
 </head>
 <body style="background-color:gray">
     <header>
@@ -11,34 +12,26 @@
     </header>
 
     <section style="text-align: center">
-        <img src="./images/TadiyosGirma.jpg" alt="Profile Picture" height="200" width="200" style="border-radius:50%">
+        <img id="profilePicture" src="./images/TadiyosGirma.jpg" alt="Profile Picture">
     <h1>Tadiyos G. Haile</h1>
     <hr>
-    <ul style="list-style: none">
-        <li style="font-family: 'Franklin Gothic Medium'"><a href="">W1D1, Home Page</a></li>
-        <li style="font-family: monospace"><a href="aboutMe.html">W1D2, About Me</a></li>
-        <li style="font-family: monospace"><a href="../w1d2recipe/index.html">W1D2, Recipe</a></li>
-        <li style="font-family: monospace"><a href="tmnt.html">W1D4, Movie Review</a></li>
-        <li style="font-family: monospace"><a href="">W1D5</a></li>
-        <li style="font-family: monospace"><a href="">W1D6</a></li>
-        <li style="font-family: monospace"><a href="">W2D1</a></li>
-        <li style="font-family: monospace"><a href="">W2D2</a></li>
+    <ul>
+        <li ><a href="">W1D1, Home Page</a></li>
+        <li ><a href="aboutMe.html">W1D2, About Me</a></li>
+        <li ><a href="../w1d2recipe/index.html">W1D2, Recipe</a></li>
+        <li ><a href="tmnt.html">W1D3, Movie Review</a></li>
+        <li ><a href="">W1D5</a></li>
+        <li ><a href="">W1D6</a></li>
+        <li ><a href="">W2D1</a></li>
+        <li ><a href="">W2D2</a></li>
     </ul>    
     </section>  
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
     <hr>
 
     <footer>
-        <div style="text-align: center"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
-        <div style="text-align: center"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
+        <div class="footerDiv"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a href="">Trademarks</a> | <a href="">Legal</a> </div>
+        <div class="footerDiv"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
         <a href="https://validator.w3.org/check/referer">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"
                  style="padding-top: 1rem;" />
