added a background image for main page
added a background image for main page

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -6,7 +6,7 @@
     <title>My First Web Page</title>
     <link href="./css/home.css" type="text/css" rel="stylesheet" />
 </head>
-<body style="background-color:gray">
+<body>
     <header>
         <!-- <nav>the nav nav </nav> -->
     </header>
@@ -20,7 +20,7 @@
         <li ><a href="aboutMe.html">W1D2, About Me</a></li>
         <li ><a href="../w1d2recipe/index.html">W1D2, Recipe</a></li>
         <li ><a href="tmnt.html">W1D3, Movie Review</a></li>
-        <li ><a href="">W1D5</a></li>
+        <li ><a href="">W1D4</a>Forms</li>
         <li ><a href="">W1D6</a></li>
         <li ><a href="">W2D1</a></li>
         <li ><a href="">W2D2</a></li>
