made a correction to aboutme page
make it center, change the background colors and modified the back link

--- a/CS472-WAP-2020/aboutMe.html
+++ b/CS472-WAP-2020/aboutMe.html
@@ -63,7 +63,7 @@
                     style="padding-top: 1rem;" />
             </a>
 
-            <a href="index.html" class="back">BACK</a>
+            <a href="index.html" id="back">BACK</a>
         </footer>
     </div>
 </body>
