--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -20,7 +20,7 @@
         <li ><a href="aboutMe.html">W1D2, About Me</a></li>
         <li ><a href="../w1d2recipe/index.html">W1D2, Recipe</a></li>
         <li ><a href="tmnt.html">W1D3, Movie Review</a></li>
-        <li ><a href="./logInForm.html">W1D4</a>Login Form</li>
+        <li ><a href="./logInForm.html">Login Form</a></li>
         <li ><a href="">W1D6</a></li>
         <li ><a href="">W2D1</a></li>
         <li ><a href="">W2D2</a></li>
