--- a/CS472-WAP-2020/logInForm.html
+++ b/CS472-WAP-2020/logInForm.html
@@ -48,7 +48,8 @@
                     <div class="form-group">
                         <label for="passWordTextField">Password</label>
                         <input required id="passWordTextField" type="password"
-                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}" placeholder="Enter Password" class="form-control">
+                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}" placeholder="Enter Password"
+                            class="form-control">
                         <small class="form-text text-muted">your password should be 10 characters long with atleast one
                             capital letter and one number</small>
                     </div>
@@ -75,7 +76,18 @@
     </main>
 
     <footer>
+        <div class="footerDiv"> <a href=""> Privacy & Security</a> | <a href="">Terms of Use</a> | <a
+                href="">Trademarks</a> | <a href="">Legal</a> </div>
+        <div class="footerDiv"> Copyright © 2020 Tadiyos Girma Developed with Visual Studio Code </div>
+        <a href="https://validator.w3.org/check/referer">
+            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"
+                style="padding-top: 1rem;" />
+        </a>
 
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="html validator"
+                style="padding-top: 1rem;" />
+        </a>
     </footer>
 
 
