--- a/CS472-WAP-2020/logInForm.html
+++ b/CS472-WAP-2020/logInForm.html
@@ -55,9 +55,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="email">Website</label>
-                        <input required class="form-control" type="url" name="customerName" id="email"
-                            placeholder="Enter URL">
+                        <label for="Website">Website</label>
+                        <input required class="form-control" type="url" name="customerName" id="Website"
+                            placeholder="Enter URL" pattern="https?://.+" title="Include http://">
                         <small class="form-text text-muted">Enter fully qualified URL,
                             Example:https://outlook.office365.com</small>
                     </div>
@@ -67,8 +67,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button pattern="https?://.+" title="Include http://" id="btnSubmit" type="submit"
-                            class="btn btn-primary">Submit</button>
+                        <button id="btnSubmit" type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </fieldset>
             </form>
