--- a/CS472-WAP-2020/basicJavaScript.html
+++ b/CS472-WAP-2020/basicJavaScript.html
@@ -8,5 +8,6 @@
 <body>
     <script src="../js/basicJavaScript.js"></script>
     <h1>W1D5 BASIC JAVASCTIPT</h1>
+    <h2>press Ctrl + Shift + i to view the JAVASCTIPT results</h2>
 </body>
 </html>
