--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -22,7 +22,7 @@
         <li ><a href="tmnt.html">W1D3, Movie Review</a></li>
         <li ><a href="./logInForm.html">W1D4, Login Form</a></li>
         <li ><a href="basicJavaScript.html">W1D5, Basic Javascript</a></li>
-        <li ><a href="">W2D1</a></li>
+        <li ><a href="./decoratemytext.html">W2D6, Decorate My Text</a></li>
         <li ><a href="">W2D2</a></li>
     </ul>    
     </section>  
