done the final correction on decoration
done the final correction on decoration by making it Unobtrusive

--- a/CS472-WAP-2020/decoratemytext.html
+++ b/CS472-WAP-2020/decoratemytext.html
@@ -10,9 +10,9 @@
 		Please don't remove this link or change its URL; leave it as-is!
 		-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    
+        <!-- link to your script file here -->
         <script src="../js/decoratemytext.js" type="text/javascript"></script>
-
-		<!-- link to your script file here -->
 		
 	</head>
  
@@ -27,14 +27,12 @@
         <fieldset>
             <legend>Text</legend>
             <textarea cols="30" id="textarea" placeholder="Type your text here ..." rows="4"></textarea>
-        </fieldset>
+        </fieldset>  
         
         <fieldset>
             <legend>Decoration</legend>
-            <input onclick="interval()" type="button" value="Bigger Decorations!"/> <br/>
-            <input id="bling" onchange="boldText()" type="checkbox" value="bling"/> Bling
-            <!-- <input onclick="pig()" type="button" value="Igpay Atinlay"/>
-            <input onclick="markov()" type="button" value="Malkovich"/> -->
+            <input id="button"  type="button" value="Bigger Decorations!"/> <br/>
+            <input id="bling"  type="checkbox" value="bling"/> Bling
         </fieldset>
         <div id="w3c">
             <a href="https://validator.w3.org/check/referer">
