--- a/CS472-WAP-2020/logInForm.html
+++ b/CS472-WAP-2020/logInForm.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/logInForm.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -36,7 +37,7 @@
         <div class="container">
             <h1 id="title">Login Form</h1>
 
-            <form id="logInForm" method="GET">
+            <form id="logInForm" method="POST">
                 <fieldset>
                     <div class="form-group">
                         <label for="emailTextField">Email Address</label>
@@ -89,7 +90,7 @@
         </a>
     </footer>
 
-
+    <script src="../js/logInForm.js"></script>
 </body>
 
 </html>
