connected the lab 8 and 9 to the main page
connected the lab 8 and 9 to the main page

--- a/CS472-WAP-2020/index.html
+++ b/CS472-WAP-2020/index.html
@@ -23,7 +23,8 @@
         <li ><a href="./logInForm.html">W1D4, Login Form</a></li>
         <li ><a href="basicJavaScript.html">W1D5, Basic Javascript</a></li>
         <li ><a href="./decoratemytext.html">W2D6, Decorate My Text</a></li>
-        <li ><a href="">W2D2</a></li>
+        <li ><a href="">W2D2, Modules and Inheritance Practice Exercises</a></li>
+        <li ><a href="./lab9.html">W2D3, Inheritance</a></li>
     </ul>    
     </section>  
 
