--- a/CS472-WAP-2020/logInForm.html
+++ b/CS472-WAP-2020/logInForm.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/logInForm.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <script defer src="../js/logInForm.js"></script>
 </head>
 
 <body>
@@ -90,7 +90,10 @@
         </a>
     </footer>
 
-    <script src="../js/logInForm.js"></script>
+    
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </body>
 
 </html>
